--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ jobs:
   build:
     docker:
       - image: circleci/node:8
+    environment:
+      PASS: true
     steps:
       - checkout
       - restore_cache:
