--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,9 @@ jobs:
       - run:
           name: Run Tests
           command: yarn test
+      - run:
+          name: Build Dist Folder
+          command: yarn build
 
   deploy:
     docker:
