--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,9 @@ jobs:
           name: Install awscli
           command: sudo pip install awscli
       - run:
+          name: Get PWD
+          command: echo $PWD
+      - run:
           name: Deploy to S3
           command: aws s3 sync home/ubuntu/dist/ s3://mentorship-htmltime --delete
 
