--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,8 +22,11 @@ jobs:
       - run:
           name: Build Dist Folder
           command: yarn build
+      - run:
+          name: Check Location
+          command: ls
       - persist_to_workspace:
-          root: /
+          root: ./
           paths:
             - dist
 
